--- a/ft_libft/Makefile
+++ b/ft_libft/Makefile
@@ -34,15 +34,17 @@ SRCS =	ft_atoi.c		ft_bzero.c		ft_calloc.c \
 		ft_memchr.c		ft_memcmp.c		ft_memcpy.c \
 		ft_memmove.c	ft_memset.c		ft_putchar_fd.c \
 		ft_putendl_fd.c	ft_putnbr_fd.c	ft_putstr_fd.c \
-		ft_split.c		ft_strchr.c		ft_strdup.c \
-		ft_striteri.c	ft_strjoin.c 	ft_strlcat.c \
-		ft_strlcpy.c	ft_strlen.c		ft_strmapi.c \
-		ft_strncmp.c	ft_strnstr.c	ft_strrchr.c \
-		ft_strtrim.c	ft_substr.c		ft_tolower.c \
-		ft_toupper.c	ft_lstclear.c 	ft_lstadd_back.c \
-		ft_lstdelone.c	ft_lstiter.c	ft_lstadd_front.c \
-		ft_lstlast.c 	ft_lstmap.c		ft_lstnew.c \
-		ft_lstsize.c
+		ft_split.c		ft_strchr.c \
+		ft_strdup.c		ft_striteri.c	ft_strjoin.c \
+		ft_strlcat.c	ft_strlcpy.c	ft_strlen.c \
+		ft_strmapi.c	ft_strncmp.c	ft_strnstr.c \
+		ft_strrchr.c	ft_strtrim.c	ft_substr.c \
+		ft_tolower.c	ft_toupper.c \
+		ft_lstadd_back_bonus.c			ft_lstadd_front_bonus.c \
+		ft_lstclear_bonus.c				ft_lstdelone_bonus.c \
+		ft_lstiter_bonus.c				ft_lstlast_bonus.c \
+		ft_lstmap_bonus.c				ft_lstnew_bonus.c \
+		ft_lstsize_bonus.c
 
 # Objects
 OBJS = $(SRCS:.c=.o)
@@ -71,7 +73,7 @@ clean:
 
 fclean: clean
 	@echo "$(RED)Delete program >> 🗑️$(NC)"
-	rm -f $(NAME) $(HEADER).gch
+	rm -f $(NAME)
 
 re: fclean all
 	@echo -n "Reseting"
