--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mvisca <mvisca@student.42.fr>              +#+  +:+       +#+         #
+#    By: mvisca-g <mvisca-g@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/05/31 16:04:59 by mvisca            #+#    #+#              #
-#    Updated: 2023/05/31 20:22:24 by mvisca           ###   ########.fr        #
+#    Created: 2023/06/01 14:07:34 by mvisca-g          #+#    #+#              #
+#    Updated: 2023/06/01 14:37:31 by mvisca-g         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,51 +24,9 @@ SRCS_DIR	:= src
 BUILD_DIR	:= .build
 INC_DIR		:= include
 
-SRCS 		:=			\
-	ft_atoi.c			\
-	ft_bzero.c			\
-	ft_calloc.c			\
-	ft_isalnum.c		\
-	ft_isalpha.c		\
-	ft_isascii.c		\
-	ft_isdigit.c		\
-	ft_isprint.c		\
-	ft_itoa.c			\
-	ft_memchr.c			\
-	ft_memcmp.c			\
-	ft_memcpy.c			\
-	ft_memmove.c		\
-	ft_memset.c			\
-	ft_putchar_fd.c		\
-	ft_putendl_fd.c		\
-	ft_putnbr_fd.c		\
-	ft_putstr_fd.c		\
-	ft_split.c			\
-	ft_strchr.c			\
-	ft_strdup.c			\
-	ft_striteri.c		\
-	ft_strjoin.c		\
-	ft_strlcat.c		\
-	ft_strlcpy.c		\
-	ft_strlen.c			\
-	ft_strmapi.c		\
-	ft_strncmp.c		\
-	ft_strnstr.c		\
-	ft_strrchr.c		\
-	ft_strtrim.c		\
-	ft_substr.c			\
-	ft_tolower.c		\
-	ft_toupper.c		\
-	ft_lstadd_back.c	\
-	ft_lstadd_front.c	\
-	ft_lstclear.c		\
-	ft_lstdelone.c		\
-	ft_lstiter.c		\
-	ft_lstlast.c		\
-	ft_lstmap.c			\
-	ft_lstnew.c			\
-	ft_lstsize.c
-SRCS		:= $(SRCS:%=$(SRCS_DIR)/%)
+# Import souces list from external file and parses the list to add the path
+include sources.mk
+SRCS		:= $(SRCS_LIB:%=$(SRCS_DIR)/%)
 OBJS 		:= $(SRCS:$(SRCS_DIR)/%.c=$(BUILD_DIR)/%.o)
 DEPS		:= $(OBJS:.o=.d)
 
